# rustproto

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  deny.toml
.cargo/: audit.toml
bash/: backup_account.sh  create_session.sh  deploy_latest.sh  get_firehose_event.sh  hide_firehose_event.sh  install_config.sh  install_db.sh  install_repo.sh  install_server_config.sh  list_firehose_events.sh  list_running.sh  repair_commit.sh  restart_caddy.sh  restart_pds.sh  restore_account.sh  run_pds.sh  rustproto-pds.service  set_log_level_info.sh  set_log_level_trace.sh  sync_repo.sh  tail_pds_log.sh
data/: README.md
docs/: pre-network-checklist.md  xrpc-porting-plan.md  xrpc-reference.md
docs/articles/: ten-steps-to-a-pds.md
docs/reference/: auth.md
docs/todo/: xrpc-porting-plan.md
powershell/: ApGetAccount.ps1  ApResolveActor.ps1  BackupAccount.ps1  CreateSession.ps1  GetBlob.ps1  GetPdsInfo.ps1  GetPlcHistory.ps1  GetPost.ps1  GetRepo.ps1  InstallConfig.ps1  InstallDb.ps1  PrintDbMst.ps1  PrintRepoRecords.ps1  PrintRepoStats.ps1  RepairCommit.ps1  ResolveActorInfo.ps1  RunPds.ps1  StartFirehoseConsumer.ps1  SyncGetRecord.ps1  SyncGetRecordLocal.ps1  SyncRepo.ps1  TestApplyWritesAndLogFirehose.ps1  VerifyRepo.ps1  WalkMst.ps1  _Defaults.ps1
src/: lib.rs  main.rs
src/ap/: client.rs  mod.rs  models.rs
src/cli/: ap_get_account.rs  ap_resolve_actor.rs  backup_account.rs  create_session.rs  get_blob.rs  get_pds_info.rs  get_plc_history.rs  get_post.rs  get_repo.rs  inspect_firehose_event.rs  install_config.rs  install_db.rs  mod.rs  print_db_mst.rs  print_repo_records.rs  print_repo_stats.rs  repair_commit.rs  resolve_actor.rs  run_pds.rs  start_firehose_consumer.rs  sync_get_record.rs  sync_get_record_local.rs  sync_repo.rs  test_apply_writes_and_log_firehose.rs  verify_common.rs  verify_repo.rs  walk_mst.rs
src/firehose/: mod.rs
src/fs/: local_file_system.rs  mod.rs
src/log/: console_destination.rs  file_destination.rs  log_destination.rs  log_level.rs  logger.rs  mod.rs
src/mst/: mod.rs  mst.rs  mst_entry.rs  mst_item.rs  mst_node.rs
src/pds/: background_jobs.rs  blob_db.rs  firehose_event_generator.rs  http_utils.rs  installer.rs  mod.rs  (+2 more)
tests/: integration_test.rs  pds_db_tests.rs
(+84 files in other folders)
