[package]
name = "rustproto"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tower-cookies = "0.11"
uuid = { version = "1.0", features = ["v4"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
hmac = "0.12"
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
